@@ -8,6 +8,11 @@ search-factory=Search factory
 search-factory=Search factory
 open-search-prototype=Search factory for selected object
 
+[mod-setting-name]
+fs-initial-zoom=Zoom level [img=info]
+[mod-setting-description]
+fs-initial-zoom=The zoom level to open results at. A larger value represents zooming further in.\nUsually between 0.3 and 3.\n[color=green]Default = 0.6[/color]
+
 [search-gui]
 keep-open=Keep open
 all-surfaces=All surfaces
