@@ -1,0 +1,11 @@
+data:extend{
+  {
+    type = "double-setting",
+    name = "fs-initial-zoom",
+    setting_type = "runtime-per-user",
+    default_value = 0.6,
+    minimum_value = 0.05,
+    maximum_value = 10,
+    order = "a",
+  },
+}
